--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:gesture-image="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
     <ScrollView
@@ -31,7 +31,7 @@
 
                 <Button
                     android:id="@+id/prev_button_top"
-                    android:layout_height="80dp"
+                    android:layout_height="60dp"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"
                     android:layout_marginRight="8dp"
@@ -39,7 +39,7 @@
 
                 <Button
                     android:id="@+id/next_button_top"
-                    android:layout_height="80dp"
+                    android:layout_height="60dp"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"
                     android:layout_marginLeft="8dp"
@@ -71,7 +71,7 @@
 
                 <Button
                     android:id="@+id/prev_button_bottom"
-                    android:layout_height="80dp"
+                    android:layout_height="60dp"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"
                     android:layout_marginRight="8dp"
@@ -79,7 +79,7 @@
 
                 <Button
                     android:id="@+id/next_button_bottom"
-                    android:layout_height="80dp"
+                    android:layout_height="60dp"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"
                     android:layout_marginLeft="8dp"
